parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TK_AND
    TK_COMMENT
    TK_ELSE
    TK_IF
    TK_NOT
    TK_OR
    TK_WHEN

Grammar

Rule 0     S' -> S
Rule 1     S -> TK_INICIO Instrucciones TK_FIN
Rule 2     Instrucciones -> Instruccion
Rule 3     Instrucciones -> Instrucciones Instruccion
Rule 4     Instruccion -> DeclaracionTabla
Rule 5     Instruccion -> Seleccion
Rule 6     Instruccion -> Actualizacion
Rule 7     Instruccion -> Eliminacion
Rule 8     DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT
Rule 9     Campos -> Campo TK_COMMA Campos
Rule 10    Campos -> Campo
Rule 11    Campo -> TK_IDENTIFIER TK_COLON Tipo
Rule 12    Tipo -> TK_DECIMAL
Rule 13    Tipo -> TK_STRING
Rule 14    Tipo -> TK_DATETIME
Rule 15    Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT
Rule 16    ListaCampos -> TK_IDENTIFIER TK_COMMA ListaCampos
Rule 17    ListaCampos -> TK_IDENTIFIER
Rule 18    Filtro -> TK_FILTER TK_BY Condicion
Rule 19    Condicion -> TK_IDENTIFIER TK_OPERADORES TK_IDENTIFIER
Rule 20    Condicion -> TK_IDENTIFIER TK_OPERADORES Valor
Rule 21    Valor -> TK_NUMBER
Rule 22    Valor -> TK_STRING
Rule 23    Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT
Rule 24    Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones
Rule 25    Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor
Rule 26    Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT

Terminals, with rules where they appear

TK_ALTER             : 23
TK_AND               : 
TK_BY                : 18
TK_CLOSE_BRACKET     : 8
TK_COLON             : 11
TK_COLUMN            : 23
TK_COMMA             : 9 16 24
TK_COMMENT           : 
TK_COMPLETELY        : 26
TK_DATETIME          : 14
TK_DECIMAL           : 12
TK_DOT               : 8 15 23 26
TK_DROP              : 26
TK_ELSE              : 
TK_FILTER            : 18
TK_FIN               : 1
TK_FORM              : 8
TK_FROM              : 15
TK_IDENTIFIER        : 8 11 15 16 17 19 19 20 23 24 25 26
TK_IF                : 
TK_INICIO            : 1
TK_NOT               : 
TK_NUMBER            : 21
TK_OPEN_BRACKET      : 8
TK_OPERADORES        : 19 20
TK_OPERATOR_EQUAL    : 24 25
TK_OR                : 
TK_QUERY             : 15
TK_STRING            : 13 22
TK_TABLE             : 8
TK_WHEN              : 
TK_WHERE             : 23
TK_WITH              : 8
error                : 

Nonterminals, with rules where they appear

Actualizacion        : 6
Asignaciones         : 23 24
Campo                : 9 10
Campos               : 8 9
Condicion            : 18 23
DeclaracionTabla     : 4
Eliminacion          : 7
Filtro               : 15
Instruccion          : 2 3
Instrucciones        : 1 3
ListaCampos          : 15 16
S                    : 0
Seleccion            : 5
Tipo                 : 11
Valor                : 20 24 25

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . TK_INICIO Instrucciones TK_FIN

    TK_INICIO       shift and go to state 2

    S                              shift and go to state 1

state 1

    (0) S' -> S .



state 2

    (1) S -> TK_INICIO . Instrucciones TK_FIN
    (2) Instrucciones -> . Instruccion
    (3) Instrucciones -> . Instrucciones Instruccion
    (4) Instruccion -> . DeclaracionTabla
    (5) Instruccion -> . Seleccion
    (6) Instruccion -> . Actualizacion
    (7) Instruccion -> . Eliminacion
    (8) DeclaracionTabla -> . TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT
    (15) Seleccion -> . TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT
    (23) Actualizacion -> . TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT
    (26) Eliminacion -> . TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT

    TK_FORM         shift and go to state 9
    TK_QUERY        shift and go to state 10
    TK_ALTER        shift and go to state 11
    TK_DROP         shift and go to state 12

    Instrucciones                  shift and go to state 3
    Instruccion                    shift and go to state 4
    DeclaracionTabla               shift and go to state 5
    Seleccion                      shift and go to state 6
    Actualizacion                  shift and go to state 7
    Eliminacion                    shift and go to state 8

state 3

    (1) S -> TK_INICIO Instrucciones . TK_FIN
    (3) Instrucciones -> Instrucciones . Instruccion
    (4) Instruccion -> . DeclaracionTabla
    (5) Instruccion -> . Seleccion
    (6) Instruccion -> . Actualizacion
    (7) Instruccion -> . Eliminacion
    (8) DeclaracionTabla -> . TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT
    (15) Seleccion -> . TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT
    (23) Actualizacion -> . TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT
    (26) Eliminacion -> . TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT

    TK_FIN          shift and go to state 13
    TK_FORM         shift and go to state 9
    TK_QUERY        shift and go to state 10
    TK_ALTER        shift and go to state 11
    TK_DROP         shift and go to state 12

    Instruccion                    shift and go to state 14
    DeclaracionTabla               shift and go to state 5
    Seleccion                      shift and go to state 6
    Actualizacion                  shift and go to state 7
    Eliminacion                    shift and go to state 8

state 4

    (2) Instrucciones -> Instruccion .

    TK_FIN          reduce using rule 2 (Instrucciones -> Instruccion .)
    TK_FORM         reduce using rule 2 (Instrucciones -> Instruccion .)
    TK_QUERY        reduce using rule 2 (Instrucciones -> Instruccion .)
    TK_ALTER        reduce using rule 2 (Instrucciones -> Instruccion .)
    TK_DROP         reduce using rule 2 (Instrucciones -> Instruccion .)


state 5

    (4) Instruccion -> DeclaracionTabla .

    TK_FIN          reduce using rule 4 (Instruccion -> DeclaracionTabla .)
    TK_FORM         reduce using rule 4 (Instruccion -> DeclaracionTabla .)
    TK_QUERY        reduce using rule 4 (Instruccion -> DeclaracionTabla .)
    TK_ALTER        reduce using rule 4 (Instruccion -> DeclaracionTabla .)
    TK_DROP         reduce using rule 4 (Instruccion -> DeclaracionTabla .)


state 6

    (5) Instruccion -> Seleccion .

    TK_FIN          reduce using rule 5 (Instruccion -> Seleccion .)
    TK_FORM         reduce using rule 5 (Instruccion -> Seleccion .)
    TK_QUERY        reduce using rule 5 (Instruccion -> Seleccion .)
    TK_ALTER        reduce using rule 5 (Instruccion -> Seleccion .)
    TK_DROP         reduce using rule 5 (Instruccion -> Seleccion .)


state 7

    (6) Instruccion -> Actualizacion .

    TK_FIN          reduce using rule 6 (Instruccion -> Actualizacion .)
    TK_FORM         reduce using rule 6 (Instruccion -> Actualizacion .)
    TK_QUERY        reduce using rule 6 (Instruccion -> Actualizacion .)
    TK_ALTER        reduce using rule 6 (Instruccion -> Actualizacion .)
    TK_DROP         reduce using rule 6 (Instruccion -> Actualizacion .)


state 8

    (7) Instruccion -> Eliminacion .

    TK_FIN          reduce using rule 7 (Instruccion -> Eliminacion .)
    TK_FORM         reduce using rule 7 (Instruccion -> Eliminacion .)
    TK_QUERY        reduce using rule 7 (Instruccion -> Eliminacion .)
    TK_ALTER        reduce using rule 7 (Instruccion -> Eliminacion .)
    TK_DROP         reduce using rule 7 (Instruccion -> Eliminacion .)


state 9

    (8) DeclaracionTabla -> TK_FORM . TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT

    TK_TABLE        shift and go to state 15


state 10

    (15) Seleccion -> TK_QUERY . ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT
    (16) ListaCampos -> . TK_IDENTIFIER TK_COMMA ListaCampos
    (17) ListaCampos -> . TK_IDENTIFIER

    TK_IDENTIFIER   shift and go to state 17

    ListaCampos                    shift and go to state 16

state 11

    (23) Actualizacion -> TK_ALTER . TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT

    TK_IDENTIFIER   shift and go to state 18


state 12

    (26) Eliminacion -> TK_DROP . TK_IDENTIFIER TK_COMPLETELY TK_DOT

    TK_IDENTIFIER   shift and go to state 19


state 13

    (1) S -> TK_INICIO Instrucciones TK_FIN .

    $end            reduce using rule 1 (S -> TK_INICIO Instrucciones TK_FIN .)


state 14

    (3) Instrucciones -> Instrucciones Instruccion .

    TK_FIN          reduce using rule 3 (Instrucciones -> Instrucciones Instruccion .)
    TK_FORM         reduce using rule 3 (Instrucciones -> Instrucciones Instruccion .)
    TK_QUERY        reduce using rule 3 (Instrucciones -> Instrucciones Instruccion .)
    TK_ALTER        reduce using rule 3 (Instrucciones -> Instrucciones Instruccion .)
    TK_DROP         reduce using rule 3 (Instrucciones -> Instrucciones Instruccion .)


state 15

    (8) DeclaracionTabla -> TK_FORM TK_TABLE . TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT

    TK_IDENTIFIER   shift and go to state 20


state 16

    (15) Seleccion -> TK_QUERY ListaCampos . TK_FROM TK_IDENTIFIER Filtro TK_DOT

    TK_FROM         shift and go to state 21


state 17

    (16) ListaCampos -> TK_IDENTIFIER . TK_COMMA ListaCampos
    (17) ListaCampos -> TK_IDENTIFIER .

    TK_COMMA        shift and go to state 22
    TK_FROM         reduce using rule 17 (ListaCampos -> TK_IDENTIFIER .)


state 18

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER . TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT

    TK_COLUMN       shift and go to state 23


state 19

    (26) Eliminacion -> TK_DROP TK_IDENTIFIER . TK_COMPLETELY TK_DOT

    TK_COMPLETELY   shift and go to state 24


state 20

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER . TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT

    TK_WITH         shift and go to state 25


state 21

    (15) Seleccion -> TK_QUERY ListaCampos TK_FROM . TK_IDENTIFIER Filtro TK_DOT

    TK_IDENTIFIER   shift and go to state 26


state 22

    (16) ListaCampos -> TK_IDENTIFIER TK_COMMA . ListaCampos
    (16) ListaCampos -> . TK_IDENTIFIER TK_COMMA ListaCampos
    (17) ListaCampos -> . TK_IDENTIFIER

    TK_IDENTIFIER   shift and go to state 17

    ListaCampos                    shift and go to state 27

state 23

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN . Asignaciones TK_WHERE Condicion TK_DOT
    (24) Asignaciones -> . TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones
    (25) Asignaciones -> . TK_IDENTIFIER TK_OPERATOR_EQUAL Valor

    TK_IDENTIFIER   shift and go to state 28

    Asignaciones                   shift and go to state 29

state 24

    (26) Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY . TK_DOT

    TK_DOT          shift and go to state 30


state 25

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH . TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT

    TK_OPEN_BRACKET shift and go to state 31


state 26

    (15) Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER . Filtro TK_DOT
    (18) Filtro -> . TK_FILTER TK_BY Condicion

    TK_FILTER       shift and go to state 33

    Filtro                         shift and go to state 32

state 27

    (16) ListaCampos -> TK_IDENTIFIER TK_COMMA ListaCampos .

    TK_FROM         reduce using rule 16 (ListaCampos -> TK_IDENTIFIER TK_COMMA ListaCampos .)


state 28

    (24) Asignaciones -> TK_IDENTIFIER . TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones
    (25) Asignaciones -> TK_IDENTIFIER . TK_OPERATOR_EQUAL Valor

    TK_OPERATOR_EQUAL shift and go to state 34


state 29

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones . TK_WHERE Condicion TK_DOT

    TK_WHERE        shift and go to state 35


state 30

    (26) Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .

    TK_FIN          reduce using rule 26 (Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .)
    TK_FORM         reduce using rule 26 (Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .)
    TK_QUERY        reduce using rule 26 (Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .)
    TK_ALTER        reduce using rule 26 (Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .)
    TK_DROP         reduce using rule 26 (Eliminacion -> TK_DROP TK_IDENTIFIER TK_COMPLETELY TK_DOT .)


state 31

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET . Campos TK_CLOSE_BRACKET TK_DOT
    (9) Campos -> . Campo TK_COMMA Campos
    (10) Campos -> . Campo
    (11) Campo -> . TK_IDENTIFIER TK_COLON Tipo

    TK_IDENTIFIER   shift and go to state 36

    Campos                         shift and go to state 37
    Campo                          shift and go to state 38

state 32

    (15) Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro . TK_DOT

    TK_DOT          shift and go to state 39


state 33

    (18) Filtro -> TK_FILTER . TK_BY Condicion

    TK_BY           shift and go to state 40


state 34

    (24) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL . Valor TK_COMMA Asignaciones
    (25) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL . Valor
    (21) Valor -> . TK_NUMBER
    (22) Valor -> . TK_STRING

    TK_NUMBER       shift and go to state 42
    TK_STRING       shift and go to state 43

    Valor                          shift and go to state 41

state 35

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE . Condicion TK_DOT
    (19) Condicion -> . TK_IDENTIFIER TK_OPERADORES TK_IDENTIFIER
    (20) Condicion -> . TK_IDENTIFIER TK_OPERADORES Valor

    TK_IDENTIFIER   shift and go to state 44

    Condicion                      shift and go to state 45

state 36

    (11) Campo -> TK_IDENTIFIER . TK_COLON Tipo

    TK_COLON        shift and go to state 46


state 37

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos . TK_CLOSE_BRACKET TK_DOT

    TK_CLOSE_BRACKET shift and go to state 47


state 38

    (9) Campos -> Campo . TK_COMMA Campos
    (10) Campos -> Campo .

    TK_COMMA        shift and go to state 48
    TK_CLOSE_BRACKET reduce using rule 10 (Campos -> Campo .)


state 39

    (15) Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .

    TK_FIN          reduce using rule 15 (Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .)
    TK_FORM         reduce using rule 15 (Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .)
    TK_QUERY        reduce using rule 15 (Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .)
    TK_ALTER        reduce using rule 15 (Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .)
    TK_DROP         reduce using rule 15 (Seleccion -> TK_QUERY ListaCampos TK_FROM TK_IDENTIFIER Filtro TK_DOT .)


state 40

    (18) Filtro -> TK_FILTER TK_BY . Condicion
    (19) Condicion -> . TK_IDENTIFIER TK_OPERADORES TK_IDENTIFIER
    (20) Condicion -> . TK_IDENTIFIER TK_OPERADORES Valor

    TK_IDENTIFIER   shift and go to state 44

    Condicion                      shift and go to state 49

state 41

    (24) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor . TK_COMMA Asignaciones
    (25) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor .

    TK_COMMA        shift and go to state 50
    TK_WHERE        reduce using rule 25 (Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor .)


state 42

    (21) Valor -> TK_NUMBER .

    TK_COMMA        reduce using rule 21 (Valor -> TK_NUMBER .)
    TK_WHERE        reduce using rule 21 (Valor -> TK_NUMBER .)
    TK_DOT          reduce using rule 21 (Valor -> TK_NUMBER .)


state 43

    (22) Valor -> TK_STRING .

    TK_COMMA        reduce using rule 22 (Valor -> TK_STRING .)
    TK_WHERE        reduce using rule 22 (Valor -> TK_STRING .)
    TK_DOT          reduce using rule 22 (Valor -> TK_STRING .)


state 44

    (19) Condicion -> TK_IDENTIFIER . TK_OPERADORES TK_IDENTIFIER
    (20) Condicion -> TK_IDENTIFIER . TK_OPERADORES Valor

    TK_OPERADORES   shift and go to state 51


state 45

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion . TK_DOT

    TK_DOT          shift and go to state 52


state 46

    (11) Campo -> TK_IDENTIFIER TK_COLON . Tipo
    (12) Tipo -> . TK_DECIMAL
    (13) Tipo -> . TK_STRING
    (14) Tipo -> . TK_DATETIME

    TK_DECIMAL      shift and go to state 54
    TK_STRING       shift and go to state 55
    TK_DATETIME     shift and go to state 56

    Tipo                           shift and go to state 53

state 47

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET . TK_DOT

    TK_DOT          shift and go to state 57


state 48

    (9) Campos -> Campo TK_COMMA . Campos
    (9) Campos -> . Campo TK_COMMA Campos
    (10) Campos -> . Campo
    (11) Campo -> . TK_IDENTIFIER TK_COLON Tipo

    TK_IDENTIFIER   shift and go to state 36

    Campo                          shift and go to state 38
    Campos                         shift and go to state 58

state 49

    (18) Filtro -> TK_FILTER TK_BY Condicion .

    TK_DOT          reduce using rule 18 (Filtro -> TK_FILTER TK_BY Condicion .)


state 50

    (24) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA . Asignaciones
    (24) Asignaciones -> . TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones
    (25) Asignaciones -> . TK_IDENTIFIER TK_OPERATOR_EQUAL Valor

    TK_IDENTIFIER   shift and go to state 28

    Asignaciones                   shift and go to state 59

state 51

    (19) Condicion -> TK_IDENTIFIER TK_OPERADORES . TK_IDENTIFIER
    (20) Condicion -> TK_IDENTIFIER TK_OPERADORES . Valor
    (21) Valor -> . TK_NUMBER
    (22) Valor -> . TK_STRING

    TK_IDENTIFIER   shift and go to state 60
    TK_NUMBER       shift and go to state 42
    TK_STRING       shift and go to state 43

    Valor                          shift and go to state 61

state 52

    (23) Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .

    TK_FIN          reduce using rule 23 (Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .)
    TK_FORM         reduce using rule 23 (Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .)
    TK_QUERY        reduce using rule 23 (Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .)
    TK_ALTER        reduce using rule 23 (Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .)
    TK_DROP         reduce using rule 23 (Actualizacion -> TK_ALTER TK_IDENTIFIER TK_COLUMN Asignaciones TK_WHERE Condicion TK_DOT .)


state 53

    (11) Campo -> TK_IDENTIFIER TK_COLON Tipo .

    TK_COMMA        reduce using rule 11 (Campo -> TK_IDENTIFIER TK_COLON Tipo .)
    TK_CLOSE_BRACKET reduce using rule 11 (Campo -> TK_IDENTIFIER TK_COLON Tipo .)


state 54

    (12) Tipo -> TK_DECIMAL .

    TK_COMMA        reduce using rule 12 (Tipo -> TK_DECIMAL .)
    TK_CLOSE_BRACKET reduce using rule 12 (Tipo -> TK_DECIMAL .)


state 55

    (13) Tipo -> TK_STRING .

    TK_COMMA        reduce using rule 13 (Tipo -> TK_STRING .)
    TK_CLOSE_BRACKET reduce using rule 13 (Tipo -> TK_STRING .)


state 56

    (14) Tipo -> TK_DATETIME .

    TK_COMMA        reduce using rule 14 (Tipo -> TK_DATETIME .)
    TK_CLOSE_BRACKET reduce using rule 14 (Tipo -> TK_DATETIME .)


state 57

    (8) DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .

    TK_FIN          reduce using rule 8 (DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .)
    TK_FORM         reduce using rule 8 (DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .)
    TK_QUERY        reduce using rule 8 (DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .)
    TK_ALTER        reduce using rule 8 (DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .)
    TK_DROP         reduce using rule 8 (DeclaracionTabla -> TK_FORM TK_TABLE TK_IDENTIFIER TK_WITH TK_OPEN_BRACKET Campos TK_CLOSE_BRACKET TK_DOT .)


state 58

    (9) Campos -> Campo TK_COMMA Campos .

    TK_CLOSE_BRACKET reduce using rule 9 (Campos -> Campo TK_COMMA Campos .)


state 59

    (24) Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones .

    TK_WHERE        reduce using rule 24 (Asignaciones -> TK_IDENTIFIER TK_OPERATOR_EQUAL Valor TK_COMMA Asignaciones .)


state 60

    (19) Condicion -> TK_IDENTIFIER TK_OPERADORES TK_IDENTIFIER .

    TK_DOT          reduce using rule 19 (Condicion -> TK_IDENTIFIER TK_OPERADORES TK_IDENTIFIER .)


state 61

    (20) Condicion -> TK_IDENTIFIER TK_OPERADORES Valor .

    TK_DOT          reduce using rule 20 (Condicion -> TK_IDENTIFIER TK_OPERADORES Valor .)

